--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.4.1",
+    "lodash": "^4.17.5",
     "mongoose": "^4.11.3",
     "mongoose-currency": "^0.2.0",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "serve-favicon": "~2.4.2",
     "url-crypt": "^1.2.1"
   }
